@@ -1,10 +1,7 @@
 package cn.oyzh.fx.plus.handler;
 
-import cn.oyzh.common.cache.CacheUtil;
-import cn.oyzh.common.cache.WeakCache;
 import cn.oyzh.common.util.CollectionUtil;
 import cn.oyzh.fx.plus.keyboard.KeyListener;
-import javafx.event.EventTarget;
 import javafx.scene.Node;
 import javafx.scene.Parent;
 import javafx.scene.control.ChoiceBox;
@@ -12,9 +9,9 @@ import javafx.scene.control.ComboBoxBase;
 import javafx.scene.control.TextInputControl;
 import javafx.scene.input.KeyCode;
 import javafx.scene.input.KeyEvent;
-import javafx.stage.Stage;
-import lombok.NonNull;
+import javafx.stage.Window;
 
+import java.lang.ref.WeakReference;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
@@ -27,88 +24,93 @@ import java.util.List;
  */
 public class TabSwitchHandler {
 
-    /**
-     * 处理器列表
-     */
-    private static final WeakCache<EventTarget, TabSwitchHandler> CACHE = CacheUtil.newWeakCache();
-
-    /**
-     * 执行初始化
-     *
-     * @param target 对写
-     * @return 处理器
-     */
-    public static TabSwitchHandler init(@NonNull EventTarget target) {
-        TabSwitchHandler handler = null;
-        if (target instanceof Parent parent) {
-            handler = new TabSwitchHandler(parent);
-            CACHE.put(target, new TabSwitchHandler(parent));
-            return handler;
-        } else if (target instanceof Stage stage) {
-            handler = new TabSwitchHandler(stage);
-            CACHE.put(target, new TabSwitchHandler(stage));
-        }
-        return handler;
-    }
-
-    /**
-     * 是否存在处理器
-     *
-     * @param target 对象
-     * @return 结果
-     */
-    public static boolean exists(EventTarget target) {
-        if (target != null) {
-            return CACHE.containsKey(target);
-        }
-        return false;
-    }
-
-    /**
-     * 执行销毁
-     *
-     * @param target 对象
-     */
-    public static void destroy(EventTarget target) {
-        if (target != null) {
-            TabSwitchHandler handler = CACHE.get(target);
-            if (handler != null) {
-                CACHE.remove(target);
-                handler.destroy();
-            }
-        }
-    }
+//    /**
+//     * 处理器列表
+//     */
+//    private static final WeakCache<EventTarget, TabSwitchHandler> CACHE = CacheUtil.newWeakCache();
+//
+//    /**
+//     * 执行初始化
+//     *
+//     * @param target 对写
+//     * @return 处理器
+//     */
+//    public static TabSwitchHandler init( EventTarget target) {
+//        TabSwitchHandler handler = null;
+//        if (target instanceof Parent parent) {
+//            handler = new TabSwitchHandler(parent);
+//            CACHE.put(target, new TabSwitchHandler(parent));
+//            return handler;
+//        } else if (target instanceof Stage stage) {
+//            handler = new TabSwitchHandler(stage);
+//            CACHE.put(target, new TabSwitchHandler(stage));
+//        }
+//        return handler;
+//    }
+//
+//    /**
+//     * 是否存在处理器
+//     *
+//     * @param target 对象
+//     * @return 结果
+//     */
+//    public static boolean exists(EventTarget target) {
+//        if (target != null) {
+//            return CACHE.containsKey(target);
+//        }
+//        return false;
+//    }
+//
+//    /**
+//     * 执行销毁
+//     *
+//     * @param target 对象
+//     */
+//    public static void destroy(EventTarget target) {
+//        if (target != null) {
+//            TabSwitchHandler handler = CACHE.get(target);
+//            if (handler != null) {
+//                CACHE.remove(target);
+//                handler.destroy();
+//            }
+//        }
+//    }
 
     /**
      * 根节点
      */
-    private final Parent root;
+    private WeakReference<Parent> rootRef;
 
-    public TabSwitchHandler(@NonNull Parent root) {
-        this.root = root;
+    public TabSwitchHandler( Parent root) {
+        this.rootRef = new WeakReference<>(root);
         this.init();
     }
 
-    public TabSwitchHandler(@NonNull Stage stage) {
-        if (stage.getScene() == null || stage.getScene().getRoot() == null) {
+    public TabSwitchHandler( Window window) {
+        if (window.getScene() == null || window.getScene().getRoot() == null) {
             throw new RuntimeException("stage.getScene().getRoot() is null!");
         }
-        this.root = stage.getScene().getRoot();
+        this.rootRef = new WeakReference<>(window.getScene().getRoot());
         this.init();
     }
 
     /**
      * 初始化
      */
-    private void init() {
-        KeyListener.listenReleased(this.root, KeyCode.TAB, this::toNextNode);
+    public void init() {
+        if (!this.isInvalid()) {
+            KeyListener.listenReleased(this.root(), KeyCode.TAB, this::toNextNode);
+        }
     }
 
     /**
      * 销毁
      */
-    private void destroy() {
-        KeyListener.unListenReleased(this.root, KeyCode.TAB);
+    public void destroy() {
+        if (!this.isInvalid()) {
+            KeyListener.unListenReleased(this.root(), KeyCode.TAB);
+        }
+        this.rootRef = null;
     }
 
     /**
@@ -117,7 +119,7 @@ public class TabSwitchHandler {
      * @param root     根节点
      * @param nodeList 节点列表
      */
-    private void findNodes(Parent root, @NonNull List<Node> nodeList) {
+    protected void findNodes(Parent root,  List<Node> nodeList) {
         for (Node n : root.getChildrenUnmodifiable()) {
             if (n.isManaged() && n.isVisible()) {
                 if (n instanceof ComboBoxBase<?>
@@ -139,10 +141,10 @@ public class TabSwitchHandler {
      * @param current  当前节点
      * @return 支持tab索引的节点
      */
-    private Node getNextNode(@NonNull List<Node> nodeList, @NonNull Node current) {
+    protected Node getNextNode( List<Node> nodeList,  Node current) {
         List<Node> list = nodeList.parallelStream().filter(f -> f.getViewOrder() > current.getViewOrder()).toList();
         if (!list.isEmpty()) {
-            return list.get(0);
+            return list.getFirst();
         }
         int index = nodeList.indexOf(current);
         if (index + 1 < nodeList.size()) {
@@ -156,10 +158,13 @@ public class TabSwitchHandler {
      *
      * @param event 事件
      */
-    private void toNextNode(KeyEvent event) {
+    protected void toNextNode(KeyEvent event) {
+        if (this.isInvalid()) {
+            return;
+        }
         List<Node> nodeList = new ArrayList<>(128);
         // 寻找节点
-        this.findNodes(this.root, nodeList);
+        this.findNodes(this.root(), nodeList);
         // 执行排序
         nodeList.sort(Comparator.comparingDouble(Node::getViewOrder));
         // 下一个节点
@@ -176,5 +181,13 @@ public class TabSwitchHandler {
         if (next != null) {
             next.requestFocus();
         }
+    }
+
+    protected boolean isInvalid() {
+        return this.rootRef == null || this.rootRef.get() == null;
+    }
+
+    protected Parent root() {
+        return this.rootRef == null ? null : this.rootRef.get();
     }
 }
